@@ -8,6 +8,8 @@ TODOS
    o    Eventual incorporation of line searches, possibly in a
         separate routine
 
+   o    Restore numerical gradient with warning.
+
 2012-7-9
    o    Removed optansout to avoid conflicts with optplus/optimx
 
